[package]
name = "yaf2m"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Yet Another Feed to Mail: Send email on RSS feed update."

[dependencies]
ammonia = "=4.1.2"
ansi-to-html = "=0.2.2"
blake3 = "=1.8.3"
chrono = "=0.4.42"
color-eyre = "=0.6.5"
env_logger = "=0.11.8"
feed-rs = "=2.3.1"
humantime = "=2.3.0"
humantime-serde = "=1.1.1"
lettre = { version = "=0.11.19", default-features = false, features = ["builder", "pool", "smtp-transport", "serde", "tokio1-rustls", "aws-lc-rs", "webpki-roots"] }
log = "=0.4.29"
minijinja = { version = "=2.14.0", features = ["loader"] }
minijinja-contrib = { version = "=2.14.0", features = ["datetime", "timezone"] }
ouroboros = "=0.18.5"
regex = "=1.12.2"
reqwest = { version = "=0.12.28", default-features = false, features = ["charset", "http2", "system-proxy", "rustls-tls-webpki-roots"] }
reqwest-middleware = "=0.4.2"
reqwest-retry = "=0.9.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_with = "=3.16.1"
sqlx = { version = "=0.8.6", features = ["postgres", "runtime-tokio", "chrono"] }
tokio = { version = "=1.48.0", features = ["rt-multi-thread", "macros", "time"] }
toml = "=0.9.11"
tracing = "=0.1.44"
